feat : 과제 요구사항 충족 -  1. owner 검색을 last name에서 first name 으로 변경  2. first name을 검색 시 이름을 앞에서부터 적어주지 않더라도 검색해줄 수 있도록 수정  3. owner에 age를 추가

--- a/src/main/resources/templates/owners/ownerDetails.html
+++ b/src/main/resources/templates/owners/ownerDetails.html
@@ -19,6 +19,10 @@
         <td th:text="*{address}" /></td>
       </tr>
       <tr>
+        <th>Age</th>
+        <td th:text="*{age}" /></td>
+      </tr>
+      <tr>
         <th>City</th>
         <td th:text="*{city}" /></td>
       </tr>
