--- a/src/main/resources/templates/owners/ownersList.html
+++ b/src/main/resources/templates/owners/ownersList.html
@@ -11,6 +11,7 @@
         <tr>
             <th style="width: 150px;">Name</th>
             <th style="width: 200px;">Address</th>
+            <th style="width: 200px;">Age</th>
             <th>City</th>
             <th style="width: 120px">Telephone</th>
             <th>Pets</th>
@@ -22,6 +23,7 @@
                   <a th:href="@{/owners/__${owner.id}__}" th:text="${owner.firstName + ' ' + owner.lastName}"/></a>
               </td>
               <td th:text="${owner.address}"/>
+              <td th:text="${owner.age}"/>
               <td th:text="${owner.city}"/>
               <td th:text="${owner.telephone}"/>
               <td><span th:each="pet : ${owner.pets}" th:text="${pet.name} "/></td>
